fixed: text align of progress__percentage

--- a/styles/components/progress.css
+++ b/styles/components/progress.css
@@ -11,6 +11,10 @@
     font-size: 1.2rem;
 }
 
+.progress__percentage {
+    text-align: center;
+}
+
 .progress__phrase {
     font-weight: 500;
 }
